--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,5 @@
 {
   "port": 8080,
   "documentDir": "",
-  "documentDirs": [
-    "D:\\wwwroot\\yutuo\\data-hub\\docs\\guide\\api"
-  ]
+  "documentDirs": []
 }
